HUD color to green

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -24,6 +24,8 @@ cl_bobamt_vert "0"
 cl_showloadout "1"
 cl_bobcycle "1"
 
+cl_hud_color 8 // Green HUD color
+
 fps_max "0"
 mat_queue_mode "2"
 
@@ -45,7 +47,7 @@ snd_rear_headphone_position "90"
 snd_mixahead "0.05"
 voice_loopback 0
 
-hud_scaling ".95"
+hud_scaling ".7"
 hud_showtargetid "1"
 
 m_rawinput "1"
