New aliases and radar rotation.

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -1,7 +1,12 @@
 // Netgraph in scores
 alias "+ng" "+showscores; net_graph 1"
 alias "-ng" "-showscores; net_graph 0"
+alias "my_use_smoke" "use weapon_smokegrenade"
+alias "my_use_flash" "use weapon_flashbang"
+alias "my_use_fire" "use weapon_molotov; use weapon_incgrenade"
+alias "my_use_he" "use weapon_hegrenade"
+alias "my_wheel_default_bindings" "bind MWHEELUP my_use_smoke; bind MWHEELDOWN my_use_flash"
 
 // Bunny hop
 alias bhopon "bind MWHEELDOWN +jump;bind MWHEELUP +jump;bind mouse3 bhopoff"
-alias bhopoff "bind MWHEELDOWN invnext;bind MWHEELUP invprev;bind mouse3 bhopon"
+alias bhopoff "my_wheel_default_bindings; bind mouse3 bhopon"
