--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -4,6 +4,7 @@ bind j "sv_cheats 1; noclip"
 bind k "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade;"
 
 bind mouse3 "bhopon" // toggle scroll wheel bhop
-bind "TAB" "+ng"; //
+my_wheel_default_bindings
+bind "TAB" "+ng"
 bind f8 "disconnect"
 bind f9 "quit"
