1. Overrides were added, 2. Install script made more intuitive

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -38,7 +38,6 @@ r_eyeshift_z "0" // No Eye Movement Z-Angel.
 r_eyesize "0" // Smaller Eyes.
 r_dynamic "1"
 
-windows_speaker_config "1" 
 snd_mixahead "0.05"
 snd_musicvolume "0"
 snd_headphone_pan_exponent "2"
@@ -56,6 +55,7 @@ m_mouseaccel2 "0"
 
 sensitivity 2.3
 
+exec my_overrides
 exec my_aliases
 exec my_binds
 
