1. Fast connect to ArmaPlace.com added, 2. Console filters

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,3 +1,7 @@
+con_filter_enable "2"
+con_filter_text "Damage"
+con_filter_text_out "Player:"
+
 gameinstructor_enable "0"
 
 cl_autohelp "0"
@@ -9,6 +13,8 @@ cl_interp_ratio "1"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_crosshairalpha "255"
+
+rate "768432"
 
 cl_radar_always_centered "0"
 cl_radar_icon_scale_min "1"
@@ -23,10 +29,12 @@ cl_bobamt_lat "0"
 cl_bobamt_vert "0"
 cl_showloadout "1"
 cl_bobcycle "1"
+cl_use_opens_buy_menu "0" 
 
 cl_hud_color 8 // Green HUD color
 
-fps_max "0"
+fps_max "300"
+fps_max_menu "300"
 mat_queue_mode "2"
 
 r_drawtracers_firstperson "0" // Firstperson Tracers OFF.
