--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -1,3 +1,6 @@
+// fast connects
+alias "c-ap" "connect armaplace.com"
+
 // Netgraph in scores
 alias "+ng" "+showscores; net_graph 1"
 alias "-ng" "-showscores; net_graph 0"
