1. Redundant aliases removed, 2. Training aliases added

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -1,15 +1,44 @@
+alias d disconnect
+alias q quit
+
 // fast connects
 alias "c-ap" "connect armaplace.com"
 
-// Netgraph in scores
-alias "+ng" "+showscores; net_graph 1"
-alias "-ng" "-showscores; net_graph 0"
-alias "my_use_smoke" "use weapon_smokegrenade"
-alias "my_use_flash" "use weapon_flashbang"
-alias "my_use_fire" "use weapon_molotov; use weapon_incgrenade"
-alias "my_use_he" "use weapon_hegrenade"
-alias "my_wheel_default_bindings" "bind MWHEELUP my_use_smoke; bind MWHEELDOWN my_use_flash"
+// fast map change
+alias mo-cs "rcon game_type 0; rcon game_mode 0; rcon exec gamemode_casual"
+alias mo-cm "rcon game_type 0; rcon game_mode 1; rcon exec gamemode_competitive"
+alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace"
+alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition"
+alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch"
 
-// Bunny hop
-alias bhopon "bind MWHEELDOWN +jump;bind MWHEELUP +jump;bind mouse3 bhopoff"
-alias bhopoff "my_wheel_default_bindings; bind mouse3 bhopon"
+alias ma-d2 "rcon changelevel de_dust2"
+alias ma-mi "rcon changelevel de_mirage"
+alias ma-lk "rcon changelevel de_lake"
+alias ma-nk "rcon changelevel de_nuke"
+alias ma-az "rcon changelevel de_aztec"
+
+// Netgraph in scores
+alias +ng "+showscores; net_graph 1"
+alias -ng "-showscores; net_graph 0"
+alias my-use-smoke "use weapon_smokegrenade"
+alias my-use-flash "use weapon_flashbang"
+alias my-use-fire "use weapon_molotov; use weapon_incgrenade"
+alias my-use-he "use weapon_hegrenade"
+alias my-wheel-default-bindings "bind MWHEELUP my_use_smoke; bind MWHEELDOWN my_use_flash"
+alias my-default-mouse3-bind r_cleardecals
+
+// For training
+alias my-tr-mp-off "rcon sv_cheats 0; rcon mp_limitteams 1; rcon mp_autoteambalance 1; rcon mp_roundtime 3; rcon mp_maxmoney 16000; rcon mp_startmoney 800; rcon mp_buy_anywhere 0; rcon mp_buytime 20; rcon mp_restartgame 1"
+alias my-tr-mp-on "rcon mp_limitteams 0; rcon mp_autoteambalance 0; rcon mp_roundtime 60; rcon mp_roundtime 60; rcon mp_maxmoney 60000; rcon mp_startmoney 60000; rcon mp_buy_anywhere 1; rcon mp_buytime 3600; rcon mp_restartgame 1; rcon mp_warmup_end"
+
+alias my-tr-trails-off "rcon sv_infinite_ammo 0; rcon sv_showimpacts 0; rcon sv_showimpacts_time 10; rcon ammo_grenade_limit_total 3; rcon sv_infinite_ammo 0; rcon sv_grenade_trajectory 0; rcon sv_grenade_trajectory_thickness 1; rcon sv_grenade_trajectory_dash 1"
+alias my-tr-trails-on "rcon sv_infinite_ammo 1; rcon sv_showimpacts 1; rcon sv_showimpacts_time 10; rcon ammo_grenade_limit_total 5; rcon sv_infinite_ammo 1; rcon sv_grenade_trajectory 1; rcon sv_grenade_trajectory_thickness 1; rcon sv_grenade_trajectory_dash 1"
+
+alias my-tr-guns-off "rcon sv_infinite_ammo 0; rcon ammo_grenade_limit_total 3"
+alias my-tr-guns-on "rcon sv_infinite_ammo 1; rcon ammo_grenade_limit_total 5"
+
+alias my-tr-off "bind mouse3 my-default-mouse3-bind; my-tr-guns-off; my-tr-mp-off; rcon sv_cheats 0"
+alias my-tr-on "bind mouse3 noclip; rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
+
+alias my-tr-grenades-offline-on "sv_cheats 1; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade; ammo_grenade_limit_total 5; sv_infinite_ammo 1; sv_grenade_trajectory 1; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-off"
+alias my-tr-grenades-offline-off "ammo_grenade_limit_total 3; sv_infinite_ammo 0; sv_grenade_trajectory 0; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-on"
