--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -63,6 +63,9 @@ m_mouseaccel2 "0"
 
 sensitivity 2.3
 
+rcon_address localhost
+rcon_password password
+
 exec my_overrides
 exec my_aliases
 exec my_binds
