--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -1,10 +1,7 @@
 // Training mode
-bind h "sv_cheats 1; sv_grenade_trajectory 1; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1"
-bind j "sv_cheats 1; noclip"
-bind k "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade;"
+bind h "my-tr-grenades-offline-on"
+bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 
-bind mouse3 "bhopon" // toggle scroll wheel bhop
-my_wheel_default_bindings
-bind "TAB" "+ng"
-bind f8 "disconnect"
-bind f9 "quit"
+my-wheel-default-bindings
+bind mouse3 r_cleardecals
+bind TAB +ng
