--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -15,7 +15,7 @@ cl_cmdrate "128"
 cl_updaterate "128"
 cl_crosshairalpha "255"
 
-rate "768432"
+rate "3768432"
 
 cl_radar_always_centered "0"
 cl_radar_icon_scale_min "1"
