1. ft-menu bind added, 2. create_sym_links.sh (50%)

--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -1,6 +1,7 @@
 // Training mode
 bind h "my-tr-grenades-offline-on"
 bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
+bind k ft-menu
 
 my-wheel-default-bindings
 bind mouse3 r_cleardecals
