--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -4,5 +4,5 @@ bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 bind k ft-menu
 
 my-wheel-default-bindings
-bind mouse3 r_cleardecals
 bind TAB +ng
+bind shift "+speed; r_cleardecals"
