Windows mouse acceleration 0.

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -61,8 +61,9 @@ hud_showtargetid "1"
 m_rawinput "1"
 m_mouseaccel1 "0"
 m_mouseaccel2 "0"
+m_mousespeed "0"
 
-sensitivity 2.3
+sensitivity 2
 
 rcon_address localhost
 rcon_password password
