Cache and Inferno added into aliases.

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -13,6 +13,8 @@ alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmat
 
 alias ma-d2 "rcon changelevel de_dust2"
 alias ma-mi "rcon changelevel de_mirage"
+alias ma-ca "rcon changelevel de_cache"
+alias ma-in "rcon changelevel de_inferno"
 alias ma-lk "rcon changelevel de_lake"
 alias ma-nk "rcon changelevel de_nuke"
 alias ma-az "rcon changelevel de_aztec"
