Bot difficulty = 3 for every mod change.

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -5,11 +5,11 @@ alias q quit
 alias "c-ap" "connect armaplace.com"
 
 // fast map change
-alias mo-cs "rcon game_type 0; rcon game_mode 0; rcon exec gamemode_casual"
-alias mo-cm "rcon game_type 0; rcon game_mode 1; rcon exec gamemode_competitive"
-alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace"
-alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition"
-alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch"
+alias mo-cs "rcon game_type 0; rcon game_mode 0; rcon exec gamemode_casual; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-cm "rcon game_type 0; rcon game_mode 1; rcon exec gamemode_competitive; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch; rcon bot_difficulty 3; rcon bot_kick"
 
 alias ma-d2 "rcon changelevel de_dust2"
 alias ma-mi "rcon changelevel de_mirage"
