Some facit options.

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -13,7 +13,10 @@ cl_interp "0"
 cl_interp_ratio "1"
 cl_cmdrate "128"
 cl_updaterate "128"
-cl_crosshairalpha "255"
+cl_allowdownload "1"
+cl_downloadfilter "0"
+ds_get_newest_subscribed_files
+voice_enable 1
 
 rate "3768432"
 
