Some new features.

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -35,7 +35,7 @@ cl_use_opens_buy_menu "0"
 cl_hud_color 8 // Green HUD color
 
 fps_max "0"
-fps_max_menu "300"
+fps_max_menu "255"
 mat_queue_mode "2"
 
 r_drawtracers_firstperson "0" // Firstperson Tracers OFF.
@@ -46,6 +46,8 @@ r_eyeshift_y "0" // No Eye Movement Y-Angel.
 r_eyeshift_z "0" // No Eye Movement Z-Angel.
 r_eyesize "0" // Smaller Eyes.
 r_dynamic "1"
+
+muzzleflash_light "0"
 
 snd_mixahead "0.05"
 snd_musicvolume "0"
