--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -5,11 +5,11 @@ alias q quit
 alias "c-ap" "connect armaplace.com"
 
 // fast map change
-alias mo-cs "rcon game_type 0; rcon game_mode 0; rcon exec gamemode_casual; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-cm "rcon game_type 0; rcon game_mode 1; rcon exec gamemode_competitive; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-cs "rcon game_type 0; rcon game_mode 0; rcon exec gamemode_casual; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-cm "rcon game_type 0; rcon game_mode 1; rcon exec gamemode_competitive; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
+alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
 
 alias ma-d2 "rcon changelevel de_dust2"
 alias ma-mi "rcon changelevel de_mirage"
@@ -26,8 +26,6 @@ alias my-use-smoke "use weapon_smokegrenade"
 alias my-use-flash "use weapon_flashbang"
 alias my-use-fire "use weapon_molotov; use weapon_incgrenade"
 alias my-use-he "use weapon_hegrenade"
-alias my-wheel-default-bindings "bind MWHEELUP my_use_smoke; bind MWHEELDOWN my_use_flash"
-alias my-default-mouse3-bind r_cleardecals
 
 // For training
 alias my-tr-mp-off "rcon sv_cheats 0; rcon mp_limitteams 1; rcon mp_autoteambalance 1; rcon mp_roundtime 3; rcon mp_maxmoney 16000; rcon mp_startmoney 800; rcon mp_buy_anywhere 0; rcon mp_buytime 20; rcon mp_restartgame 1"
@@ -39,8 +37,31 @@ alias my-tr-trails-on "rcon sv_infinite_ammo 1; rcon sv_showimpacts 1; rcon sv_s
 alias my-tr-guns-off "rcon sv_infinite_ammo 0; rcon ammo_grenade_limit_total 3"
 alias my-tr-guns-on "rcon sv_infinite_ammo 1; rcon ammo_grenade_limit_total 5"
 
-alias my-tr-off "bind mouse3 my-default-mouse3-bind; my-tr-guns-off; my-tr-mp-off; rcon sv_cheats 0"
-alias my-tr-on "bind mouse3 noclip; rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
+alias my-tr-off "my-tr-guns-off; my-tr-mp-off; rcon sv_cheats 0"
+alias my-tr-on "rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
 
 alias my-tr-grenades-offline-on "sv_cheats 1; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade; ammo_grenade_limit_total 5; sv_infinite_ammo 1; sv_grenade_trajectory 1; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-off"
 alias my-tr-grenades-offline-off "ammo_grenade_limit_total 3; sv_infinite_ammo 0; sv_grenade_trajectory 0; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-on"
+alias my-t-bots "rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t;"
+alias my-ct-bots "rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct;"
+
+alias my-demo-scale-40 "demo_timescale 4.0; alias my-demo-mwheelup my-demo-scale-40; alias my-demo-mwheeldown my-demo-scale-34"
+alias my-demo-scale-34 "demo_timescale 3.4; alias my-demo-mwheelup my-demo-scale-40; alias my-demo-mwheeldown my-demo-scale-28"
+alias my-demo-scale-28 "demo_timescale 2.8; alias my-demo-mwheelup my-demo-scale-34; alias my-demo-mwheeldown my-demo-scale-20"
+alias my-demo-scale-20 "demo_timescale 2.0; alias my-demo-mwheelup my-demo-scale-28; alias my-demo-mwheeldown my-demo-scale-16"
+alias my-demo-scale-16 "demo_timescale 1.6; alias my-demo-mwheelup my-demo-scale-20; alias my-demo-mwheeldown my-demo-scale-12"
+alias my-demo-scale-12 "demo_timescale 1.2; alias my-demo-mwheelup my-demo-scale-16; alias my-demo-mwheeldown my-demo-scale-10"
+alias my-demo-scale-10 "demo_timescale 1.0; alias my-demo-mwheelup my-demo-scale-12; alias my-demo-mwheeldown my-demo-scale-8"
+alias my-demo-scale-8 "demo_timescale 0.8; alias my-demo-mwheelup my-demo-scale-10; alias my-demo-mwheeldown my-demo-scale-4"
+alias my-demo-scale-4 "demo_timescale 0.4; alias my-demo-mwheelup my-demo-scale-8; alias my-demo-mwheeldown my-demo-scale-2"
+alias my-demo-scale-2 "demo_timescale 0.2; alias my-demo-mwheelup my-demo-scale-4; alias my-demo-mwheeldown my-demo-scale-1"
+alias my-demo-scale-1 "demo_timescale 0.1; alias my-demo-mwheelup my-demo-scale-2; alias my-demo-mwheeldown my-demo-scale-1"
+
+alias my-demo-mwheelup "my-demo-scale-10"
+alias my-demo-mwheeldown "my-demo-scale-8"
+//alias my-demo-mode-binds-toggle "bind l my-normal-mode-binds-toggle; bind mwheeldown my-demo-mwheeldown; bind mwheelup my-demo-mwheelup"
+//alias my-normal-mode-binds-toggle "bind l my-demo-mode-binds-toggle; bind mwheeldown nade_sm; bind mwheelup nade_fl"
+
+alias nade_he "use weapon_knife; use weapon_hegrenade"
+alias nade_fl "use weapon_knife; use weapon_flashbang"
+alias nade_sm "use weapon_knife; use weapon_smokegrenade"
