--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -2,7 +2,16 @@
 bind h "my-tr-grenades-offline-on"
 bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 bind k ft-menu
+bind l my-demo-mode-binds-toggle
+bind n noclip
+bind \ "rcon sp plugin reload field_training"
+bind , god
 
-my-wheel-default-bindings
+bind mouse3 nade_he
+bind = my-demo-mwheelup
+bind - my-demo-mwheeldown
+bind mwheeldown nade_sm
+bind mwheelup nade_fl
+bind alt +near_nades
 bind TAB +ng
 bind shift "+speed; r_cleardecals"
