--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -3,7 +3,7 @@ bind h "my-tr-grenades-offline-on"
 bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 bind k ft-menu
 bind l my-demo-mode-binds-toggle
-bind n noclip
+bind alt noclip
 bind \ "rcon sp plugin reload field_training"
 bind , god
 
@@ -12,6 +12,5 @@ bind = my-demo-mwheelup
 bind - my-demo-mwheeldown
 bind mwheeldown nade_sm
 bind mwheelup nade_fl
-bind alt +near_nades
 bind TAB +ng
 bind shift "+speed; r_cleardecals"
