Simple training aliases added.

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -40,6 +40,10 @@ alias my-tr-guns-on "rcon sv_infinite_ammo 1; rcon ammo_grenade_limit_total 5"
 alias my-tr-off "my-tr-guns-off; my-tr-mp-off; rcon sv_cheats 0"
 alias my-tr-on "rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
 
+alias my-tr "my-tr-on; my-tr-guns-on; mo-dm"
+alias my-t-bots "rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; "
+alias my-ct-bots "rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; "
+
 alias my-tr-grenades-offline-on "sv_cheats 1; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade; ammo_grenade_limit_total 5; sv_infinite_ammo 1; sv_grenade_trajectory 1; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-off"
 alias my-tr-grenades-offline-off "ammo_grenade_limit_total 3; sv_infinite_ammo 0; sv_grenade_trajectory 0; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-on"
 alias my-t-bots "rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t;"
