--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -38,7 +38,7 @@ alias my-tr-guns-off "rcon sv_infinite_ammo 0; rcon ammo_grenade_limit_total 3"
 alias my-tr-guns-on "rcon sv_infinite_ammo 1; rcon ammo_grenade_limit_total 5"
 
 alias my-tr-off "my-tr-guns-off; my-tr-mp-off; rcon sv_cheats 0"
-alias my-tr-on "rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
+alias my-tr-on "mo-dm; rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
 
 alias my-tr "my-tr-on; my-tr-guns-on; mo-dm"
 alias my-t-bots "rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; "
