Music settings changes.

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -53,7 +53,16 @@ r_dynamic "1"
 muzzleflash_light "0"
 
 snd_mixahead "0.05"
-snd_musicvolume "0"
+
+// Music volume settings
+snd_musicvolume "0.4"
+snd_menumusic_volume "0"
+snd_roundstart_volume "0.4"
+snd_roundend_volume "0.4"
+snd_mapobjective_volume "0.4"
+snd_tensecondwarning_volume "0.4"
+snd_deathcamera_volume "0.4"
+
 snd_headphone_pan_exponent "2"
 snd_headphone_pan_radial_weight "1"
 snd_rear_headphone_position "90"
