Bhop and granades bind change.
- jump is set up on mwheeldown/up
- grenades are set up on the x/c/v

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -11,14 +11,6 @@ alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace; rc
 alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
 alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
 
-alias ma-d2 "rcon changelevel de_dust2"
-alias ma-mi "rcon changelevel de_mirage"
-alias ma-ca "rcon changelevel de_cache"
-alias ma-in "rcon changelevel de_inferno"
-alias ma-lk "rcon changelevel de_lake"
-alias ma-nk "rcon changelevel de_nuke"
-alias ma-az "rcon changelevel de_aztec"
-
 // Netgraph in scores
 alias +ng "+showscores; net_graph 1"
 alias -ng "-showscores; net_graph 0"
@@ -72,3 +64,4 @@ alias my-demo-mwheeldown "my-demo-scale-8"
 alias nade_he "use weapon_knife; use weapon_hegrenade"
 alias nade_fl "use weapon_knife; use weapon_flashbang"
 alias nade_sm "use weapon_knife; use weapon_smokegrenade"
+alias nade_fi "use weapon_knife; use weapon_molotov"
