--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -3,14 +3,18 @@ bind h "my-tr-grenades-offline-on"
 bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 bind k ft-menu
 bind l my-demo-mode-binds-toggle
+bind n "sv_cheats 1; sv_staminajumpcost 0; sv_staminalandcost 0; god"
 bind alt noclip
 bind \ "rcon sp plugin reload field_training"
 bind , god
+bind x nade_sm
+bind c nade_fl
+bind v nade_fi
 
 bind mouse3 nade_he
 bind = my-demo-mwheelup
 bind - my-demo-mwheeldown
-bind mwheeldown nade_sm
-bind mwheelup nade_fl
+bind mwheeldown +jump
+bind mwheelup +jump
 bind TAB +ng
 bind shift "+speed; r_cleardecals"
