update demo viewing controls and grenades binds

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -58,10 +58,14 @@ alias my-demo-scale-1 "demo_timescale 0.1; alias my-demo-mwheelup my-demo-scale-
 
 alias my-demo-mwheelup "my-demo-scale-10"
 alias my-demo-mwheeldown "my-demo-scale-8"
+
 //alias my-demo-mode-binds-toggle "bind l my-normal-mode-binds-toggle; bind mwheeldown my-demo-mwheeldown; bind mwheelup my-demo-mwheelup"
 //alias my-normal-mode-binds-toggle "bind l my-demo-mode-binds-toggle; bind mwheeldown nade_sm; bind mwheelup nade_fl"
+
+alias my_gui_off "cl_drawhud 0; cl_draw_only_deathnotices 1; bind mouse3 my_gui_on;"
+alias my_gui_on "cl_drawhud 1; cl_draw_only_deathnotices 0; bind mouse3 my_gui_off;"
 
 alias nade_he "use weapon_knife; use weapon_hegrenade"
 alias nade_fl "use weapon_knife; use weapon_flashbang"
 alias nade_sm "use weapon_knife; use weapon_smokegrenade"
-alias nade_fi "use weapon_knife; use weapon_molotov"
+alias nade_fi "use weapon_knife; use weapon_molotov; use weapon_incgrenade"
