--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -6,14 +6,15 @@ bind l my-demo-mode-binds-toggle
 bind n "sv_cheats 1; sv_staminajumpcost 0; sv_staminalandcost 0; god"
 bind alt noclip
 bind \ "rcon sp plugin reload field_training"
-bind , god
+bind z nade_he
 bind x nade_sm
 bind c nade_fl
-bind v nade_fi
+bind v radio
 
-bind mouse3 nade_he
-bind = my-demo-mwheelup
-bind - my-demo-mwheeldown
+bind mouse1 "+attack; r_cleardecals"
+bind mouse3 nade_fi
+bind , my-demo-mwheeldown
+bind . my-demo-mwheelup
 bind mwheeldown +jump
 bind mwheelup +jump
 bind TAB +ng
