remove redundant aliases

--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -4,42 +4,19 @@ alias q quit
 // fast connects
 alias "c-ap" "connect armaplace.com"
 
-// fast map change
-alias mo-cs "rcon game_type 0; rcon game_mode 0; rcon exec gamemode_casual; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-cm "rcon game_type 0; rcon game_mode 1; rcon exec gamemode_competitive; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-ar "rcon game_type 1; rcon game_mode 0; rcon exec gamemode_armsrace; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-de "rcon game_type 1; rcon game_mode 1; rcon exec gamemode_demolition; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
-alias mo-dm "rcon game_type 1; rcon game_mode 2; rcon exec gamemode_teamdeathmatch; rcon mp_roundtime 60; rcon bot_difficulty 3; rcon bot_kick"
-
 // Netgraph in scores
 alias +ng "+showscores; net_graph 1"
 alias -ng "-showscores; net_graph 0"
-alias my-use-smoke "use weapon_smokegrenade"
-alias my-use-flash "use weapon_flashbang"
-alias my-use-fire "use weapon_molotov; use weapon_incgrenade"
-alias my-use-he "use weapon_hegrenade"
 
 // For training
-alias my-tr-mp-off "rcon sv_cheats 0; rcon mp_limitteams 1; rcon mp_autoteambalance 1; rcon mp_roundtime 3; rcon mp_maxmoney 16000; rcon mp_startmoney 800; rcon mp_buy_anywhere 0; rcon mp_buytime 20; rcon mp_restartgame 1"
-alias my-tr-mp-on "rcon mp_limitteams 0; rcon mp_autoteambalance 0; rcon mp_roundtime 60; rcon mp_roundtime 60; rcon mp_maxmoney 60000; rcon mp_startmoney 60000; rcon mp_buy_anywhere 1; rcon mp_buytime 3600; rcon mp_restartgame 1; rcon mp_warmup_end"
-
 alias my-tr-trails-off "rcon sv_infinite_ammo 0; rcon sv_showimpacts 0; rcon sv_showimpacts_time 10; rcon ammo_grenade_limit_total 3; rcon sv_infinite_ammo 0; rcon sv_grenade_trajectory 0; rcon sv_grenade_trajectory_thickness 1; rcon sv_grenade_trajectory_dash 1"
 alias my-tr-trails-on "rcon sv_infinite_ammo 1; rcon sv_showimpacts 1; rcon sv_showimpacts_time 10; rcon ammo_grenade_limit_total 5; rcon sv_infinite_ammo 1; rcon sv_grenade_trajectory 1; rcon sv_grenade_trajectory_thickness 1; rcon sv_grenade_trajectory_dash 1"
 
 alias my-tr-guns-off "rcon sv_infinite_ammo 0; rcon ammo_grenade_limit_total 3"
 alias my-tr-guns-on "rcon sv_infinite_ammo 1; rcon ammo_grenade_limit_total 5"
 
-alias my-tr-off "my-tr-guns-off; my-tr-mp-off; rcon sv_cheats 0"
-alias my-tr-on "mo-dm; rcon sv_cheats 1; my-tr-guns-on; my-tr-mp-on"
-
-alias my-tr "my-tr-on; my-tr-guns-on; mo-dm"
-alias my-t-bots "rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; "
-alias my-ct-bots "rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; "
-
-alias my-tr-grenades-offline-on "sv_cheats 1; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade; ammo_grenade_limit_total 5; sv_infinite_ammo 1; sv_grenade_trajectory 1; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-off"
+alias my-tr-grenades-offline-on "sv_cheats 1; ammo_grenade_limit_total 5; sv_infinite_ammo 1; give weapon_incgrenade; give weapon_smokegrenade; give weapon_flashbang; give weapon_hegrenade; use weapon_smokegrenade; sv_grenade_trajectory 1; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-off"
 alias my-tr-grenades-offline-off "ammo_grenade_limit_total 3; sv_infinite_ammo 0; sv_grenade_trajectory 0; sv_grenade_trajectory_thickness 1; sv_grenade_trajectory_dash 1; bind h my-tr-grenades-offline-on"
-alias my-t-bots "rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t; rcon bot_add_t;"
-alias my-ct-bots "rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct; rcon bot_add_ct;"
 
 alias my-demo-scale-100 "demo_timescale 10.0; alias my-demo-mwheelup my-demo-scale-100; alias my-demo-mwheeldown my-demo-scale-80"
 alias my-demo-scale-80 "demo_timescale 8.0; alias my-demo-mwheelup my-demo-scale-100; alias my-demo-mwheeldown my-demo-scale-60"
@@ -58,9 +35,6 @@ alias my-demo-scale-1 "demo_timescale 0.1; alias my-demo-mwheelup my-demo-scale-
 
 alias my-demo-mwheelup "my-demo-scale-10"
 alias my-demo-mwheeldown "my-demo-scale-8"
-
-//alias my-demo-mode-binds-toggle "bind l my-normal-mode-binds-toggle; bind mwheeldown my-demo-mwheeldown; bind mwheelup my-demo-mwheelup"
-//alias my-normal-mode-binds-toggle "bind l my-demo-mode-binds-toggle; bind mwheeldown nade_sm; bind mwheelup nade_fl"
 
 alias my_gui_off "cl_drawhud 0; cl_draw_only_deathnotices 1; bind mouse3 my_gui_on;"
 alias my_gui_on "cl_drawhud 1; cl_draw_only_deathnotices 0; bind mouse3 my_gui_off;"
