fix binds for the dz

--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -10,9 +10,10 @@ bind z nade_he
 bind x nade_sm
 bind c nade_fl
 bind v radio
-
+bind t slot12
+bind h "+spray_menu"
 bind mouse1 "+attack; r_cleardecals"
-bind mouse3 nade_fi
+bind mouse3 "player_ping"
 bind , my-demo-mwheeldown
 bind . my-demo-mwheelup
 bind mwheeldown +jump
