--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -2,7 +2,8 @@ alias d disconnect
 alias q quit
 
 // fast connects
-alias "c-ap" "connect armaplace.com"
+alias "c-a" "connect armaplace.com"
+alias "c-b" "connect corporate.alightbit.com"
 
 // Netgraph in scores
 alias +ng "+showscores; net_graph 1"
