add latest updates

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -17,8 +17,9 @@ cl_allowdownload "1"
 cl_downloadfilter "0"
 ds_get_newest_subscribed_files
 voice_enable 1
+net_graphpos 2 # Centers the net graph
 
-rate "3768432"
+rate 786432
 
 cl_radar_always_centered "0"
 cl_radar_icon_scale_min "1"
@@ -59,8 +60,8 @@ snd_musicvolume "0.4"
 snd_menumusic_volume "0"
 snd_roundstart_volume "0.0"
 snd_roundend_volume "0.0"
-snd_mapobjective_volume "0.4"
-snd_tensecondwarning_volume "0.4"
+snd_mapobjective_volume "0.147"
+snd_tensecondwarning_volume "0.268"
 snd_deathcamera_volume "0.4"
 
 snd_headphone_pan_exponent "2"
