--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -2,8 +2,8 @@ alias d disconnect
 alias q quit
 
 // fast connects
-alias "c-a" "connect armaplace.com"
-alias "c-b" "connect corporate.alightbit.com"
+alias "c-a" "connect armaplace.com; rcon_address aurora.gs.hyperborea.gg"
+alias "c-b" "connect corporate.alightbit.com; rcon_address borealis.gs.hyperborea.gg"
 
 // Netgraph in scores
 alias +ng "+showscores; net_graph 1"
