add cl_predict and cl_predictweapons for less lag

--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -15,6 +15,8 @@ cl_cmdrate "128"
 cl_updaterate "128"
 cl_allowdownload "1"
 cl_downloadfilter "0"
+cl_predict "1"
+cl_predictweapons "1"
 ds_get_newest_subscribed_files
 voice_enable 1
 net_graphpos 2 # Centers the net graph
