add latest changes

--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -4,7 +4,7 @@ bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 bind k ft-menu
 bind l my-demo-mode-binds-toggle
 bind n "sv_cheats 1; sv_staminajumpcost 0; sv_staminalandcost 0; god"
-bind alt noclip
+bind alt toggle_mouse3_voice
 bind \ "rcon sp plugin reload field_training"
 bind z nade_he
 bind x nade_sm
