--- a/cfg/my_aliases.cfg
+++ b/cfg/my_aliases.cfg
@@ -2,8 +2,9 @@ alias d disconnect
 alias q quit
 
 // fast connects
-alias "c-a" "connect armaplace.com; rcon_address aurora.gs.hyperborea.gg"
-alias "c-b" "connect corporate.alightbit.com; rcon_address borealis.gs.hyperborea.gg"
+alias "c-b" "connect borealis.gs.hyperborea.gg:27015; rcon_address borealis.gs.hyperborea.gg"
+alias "c-a" "connect aurora.gs.hyperborea.gg:27025; rcon_address aurora.gs.hyperborea.gg"
+alias "c-d" "connect 192.168.0.2; rcon_address 192.168.0.2"
 
 // Netgraph in scores
 alias +ng "+showscores; net_graph 1"
