add action series binds

--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -20,3 +20,14 @@ bind mwheeldown +jump
 bind mwheelup +jump
 bind TAB +ng
 bind shift "+speed; r_cleardecals"
+
+// ACTION SERIES admin commands
+bind leftarrow "ft-action-series-add-action"
+bind rightarrow "ft-action-series-remove-recent-action"
+bind uparrow "ft-action-series-toggle-recent-action-type"
+bind downarrow "ft-action-series-animate-current"
+bind pgup "ft-action-series-load-nearest-action-series smoke"
+bind pgdn "ft-action-series-save-nearest-action-series smoke"
+
+// ACTION SERIES player commands
+bind home "ft-action-series-animate-nearest smoke"
