--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -4,12 +4,12 @@ bind j "impulse 101; impulse 101; impulse 101; impulse 101; impulse 101"
 bind k ft-menu
 bind l my-demo-mode-binds-toggle
 bind n "sv_cheats 1; sv_staminajumpcost 0; sv_staminalandcost 0; god"
-bind alt toggle_mouse3_voice
+bind alt radio
 bind \ "rcon sp plugin reload field_training"
 bind z nade_he
 bind x nade_sm
 bind c nade_fl
-bind v radio
+bind v nade_fi
 bind t slot12
 bind h "+spray_menu"
 bind mouse1 "+attack;r_cleardecals"
@@ -20,6 +20,7 @@ bind mwheeldown +jump
 bind mwheelup +jump
 bind TAB +ng
 bind shift "+speed; r_cleardecals"
+bind ins noclip
 
 // ACTION SERIES admin commands
 bind leftarrow "ft-action-series-add-action"
