--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -27,8 +27,10 @@ bind leftarrow "ft-action-series-add-action"
 bind rightarrow "ft-action-series-remove-recent-action"
 bind uparrow "ft-action-series-toggle-recent-action-type"
 bind downarrow "ft-action-series-animate-current"
-bind pgup "ft-action-series-load-nearest-action-series smoke"
-bind pgdn "ft-action-series-save-nearest-action-series smoke"
+bind pgup "ft-action-series-edit-nearest-action-serie"
+bind pgdn "ft-action-series-new-action-serie"
+bind f8 "ft-action-series-save"
+bind f9 "ft-action-series-load"
 
 // ACTION SERIES player commands
 bind home "ft-action-series-animate-nearest smoke"
