fix grenade binds

--- a/cfg/my_binds.cfg
+++ b/cfg/my_binds.cfg
@@ -6,10 +6,10 @@ bind l my-demo-mode-binds-toggle
 bind n "sv_cheats 1; sv_staminajumpcost 0; sv_staminalandcost 0; god"
 bind alt radio
 bind \ "rcon sp plugin reload field_training"
-bind z nade_he
+bind z nade_fi
 bind x nade_sm
 bind c nade_fl
-bind v nade_fi
+bind v nade_he
 bind t slot12
 bind h "+spray_menu"
 bind mouse1 "+attack;r_cleardecals"
